--- a/JobEntry.Web/JobEntry.Web/Areas/Admin/Views/Job/Add.cshtml
+++ b/JobEntry.Web/JobEntry.Web/Areas/Admin/Views/Job/Add.cshtml
@@ -17,8 +17,8 @@
                     </div>
                     <div class="form-group mb-3">
                         <label for="defaultFormControlInput" class="form-label">Name</label>
-                        <input type="text" class="form-control" asp-for="Name">
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <input type="text" class="form-control" asp-for="Title">
+                        <span asp-validation-for="Title" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
                         <label for="defaultFormControlInput" class="form-label">Description</label>
