--- a/JobEntry.Web/JobEntry.Web/Areas/Admin/Views/Job/Edit.cshtml
+++ b/JobEntry.Web/JobEntry.Web/Areas/Admin/Views/Job/Edit.cshtml
@@ -8,6 +8,7 @@
                 <div asp-validation-summary="ModelOnly"></div>
                 <form method="post" asp-controller="Job" asp-action="Edit" enctype="multipart/form-data">
                     <input type="hidden" asp-for="Id"/>
+                    <input type="hidden" asp-for="CriterionId"/>
                     <div class="form-group mb-3">
                         <label for="defaultFormControlInput" class="form-label">Companies</label>
                         <select id="companies-list" class="form-control"
@@ -60,9 +61,16 @@
                     </div>
                     <div class="form-group mb-3">
                         <label for="defaultFormControlInput" class="form-label">Work Type</label>
-                        <select id="companies-list" class="form-control"
+                        <select id="workType-list" class="form-control"
                                 asp-for="WorkTypeId"
                                 asp-items="@(new SelectList(Model.WorkTypes,"Id","Name"))">
+                        </select>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="defaultFormControlInput" class="form-label">Work Preference</label>
+                        <select id="workPreference-list" class="form-control"
+                                asp-for="WorkPreferenceId"
+                                asp-items="@(new SelectList(Model.WorkPreferences,"Id","Name"))">
                         </select>
                     </div>
                     <div class="form-group mb-3">
